# LBM_for_cluster

./: .gitignore  CMakeLists.txt  README.md
Init/: ini.txt
Masks/: kanal 100x10.txt  maska2.txt  pore_kanal 600x100.txt
includes/IniRead/: ini.hpp
includes/Solvers/: BasicSolver2D.hpp  Solver3Phases2D.hpp  SolverMRTDimensional2D.hpp  SolverPVTsim2D.hpp  SolverPVTsimDynamic2D.hpp
src/: main.cpp  main_linux.cpp
src/Solvers/: BasicSolver2D.cpp  Solver3Phases2D.cpp  SolverMRTDimensional2D.cpp  SolverPVTsim2D.cpp  SolverPVTsimDynamic2D.cpp
